--- a/index.html
+++ b/index.html
@@ -9,23 +9,27 @@
     <!-- NOTE: The main heading area -->
     <h1>Discover hidden places in the world around you</h1>
 
-    <a href="https://bhnsdpk2vrjdb1gs0388ra8nrnqa7etf2us6v53fk4esbj4unb5g.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+    <p><a href="https://bhnsdpk2vrjdb1gs0388ra8nrnqa7etf2us6v53fk4esbj4unb5g.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
 
     <!-- NOTE: Video and phone area -->
-    <div class="">
-      <video src="./resources/videos/excursion.mp4" autoplay loop>
-      </video>
-    </div>
+    <p><video muted autoplay loop>
+      <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    </video></p>
 
     <!-- NOTE: Personal travel area -->
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="./resources/images/camp.jpg" alt="camping tents"></p>
+    <img src="./resources/images/camp.jpg" alt="camping tents">
 
     <!-- NOTE: Iphone and Android area -->
-    <img src="./resources/images/phone.png" alt="mobile phone icon">
+    <p><img src="./resources/images/phone.png" alt="mobile phone icon"></p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <a href="https://bhnsdpk2vrjdb1gs0388ra8nrnqa7etf2us6v53fk4esbj4unb5g.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+    <p><a href="https://bhnsdpk2vrjdb1gs0388ra8nrnqa7etf2us6v53fk4esbj4unb5g.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+
+    <!-- NOTE: Footer area -->
+    <div class="footer">
+      <p>© Excursion</p>
+    </div>
 
   </body>
 </html>
